--- a/_config.yml
+++ b/_config.yml
@@ -105,10 +105,10 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google" # false (default), "google", "google-universal", "google-gtag", "custom"
-  google:
-    tracking_id          : "GTM-KVSSFVJB"
-    anonymize_ip         : false # true, false (default)
+  provider               : "custom" # false (default), "google", "google-universal", "google-gtag", "custom"
+  # google:
+  #   tracking_id          : "GTM-KVSSFVJB"
+  #   anonymize_ip         : false # true, false (default)
 
 
 # Site Author
